--- a/public/screen.css
+++ b/public/screen.css
@@ -7,6 +7,196 @@ html {
 }
 
 body {
+  padding: 0px;
+  margin: 0px;
+  background-color: rgb(51, 51, 51);
+  color: rgb(216, 216, 216);
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 95%;
+  margin: auto;
+}
+
+.dracula {
+  font-size: 1rem;
   margin: 0;
-  min-height: 100%;
+}
+
+.top-nav {
+  list-style-type: none;
+  display: none;
+  padding-left: 0;
+}
+
+.top-nav li {
+  padding: 0 0.75rem;
+}
+
+.top-nav a {
+  color: rgb(28, 217, 255);
+  text-decoration: none;
+  font-size: 0.75rem;
+}
+
+.btn1 {
+  font-size: 1rem;
+  background-color: black;
+  padding: 1rem;
+  border: 0;
+  display: none;
+}
+
+.btn1 a {
+  color: white;
+  text-decoration: none;
+}
+
+.top-button {
+  display: flex;
+  justify-content: center;
+}
+
+.red-text,
+.second-nav a:visited {
+  color: rgb(255, 94, 94);
+}
+
+.second-nav {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-left: 0;
+  justify-content: center;
+}
+
+.second-nav li {
+  padding: 0 0.75rem;
+  font-size: 0.7rem;
+}
+
+.second-nav a {
+  color: rgb(151, 151, 151);
+  text-decoration: none;
+}
+
+.portfolio-images {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.image {
+  margin: 1%;
+  overflow: hidden;
+}
+
+img {
+  width: 100%;
+  display: block;
+  margin: -11% 0 -11% 0;
+}
+
+p {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 3rem;
+}
+
+.btn2 {
+  font-size: 1rem;
+  background-color: black;
+  padding: 1rem;
+  border: 0;
+}
+
+.btn2 a {
+  color: white;
+  text-decoration: none;
+}
+
+.bottom-button {
+  display: flex;
+  justify-content: center;
+}
+
+.vert-space {
+  padding-top: 2rem;
+}
+
+/*mobile is 370px*/
+/*end mark-up for styles for mobile*/
+/*tab is 768px*/
+
+@media (min-width: 768px) {
+  .top-nav {
+    display: flex;
+  }
+
+  .btn1 {
+    display: flex;
+  }
+
+  .night-mode {
+    display: flex;
+    justify-content: center;
+    width: 85%;
+    margin: auto;
+  }
+
+  .image:nth-child(odd) {
+    margin-left: 0;
+    width: 49%;
+  }
+
+  .image:nth-child(even) {
+    margin-right: 0;
+    width: 49%;
+  }
+
+  img {
+    margin: -33.5% 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .image:nth-child(6n + 3) {
+    width: 32%;
+  }
+  .image:nth-child(6n + 3) img {
+    margin: -3% 0;
+  }
+
+  .image:nth-child(6n + 4) {
+    width: 32%;
+    margin-right: 1%;
+  }
+
+  .image:nth-child(6n + 4) img {
+    margin: -3% 0;
+  }
+
+  .image:nth-child(6n + 5) {
+    width: 32%;
+    margin-right: 0;
+    margin-left: 1%;
+  }
+
+  .image:nth-child(6n + 5) img {
+    margin: -3% 0;
+  }
+
+  .image:nth-child(6n + 6) {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .image:nth-child(6n + 6) img {
+    margin: -45% 0;
+  }
 }
